# zilant-claw

./: .gitignore  README.md  build-log.txt  pubspec.yaml
android/: build.gradle  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: blocklist_light.txt  blocklist_standard.txt  blocklist_strict.txt
android/app/src/main/assets/blocklists/: blocklist_ultra_extra.txt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
assets/blocklists/: android_basic.txt  blocklist_clean.txt  blocklist_focus.txt  blocklist_light.txt  blocklist_standard.txt  blocklist_strict.txt  blocklist_test_obfusgated.txt
docs/: release_recommendations.md
lib/: main.dart
lib/logic/: protection_controller.dart
lib/ui/: home_page.dart  protection_info_page.dart  stats_page.dart  strings.dart  theme.dart
test/: domain_blocklist_test.dart  protection_controller_test.dart  protection_stats_test.dart  widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt  generated_config.cmake  generated_plugin_registrant.cc  generated_plugin_registrant.h
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp  resource.h  utils.h  win32_window.h
windows_backup/: CMakeLists.txt
windows_backup/flutter/: CMakeLists.txt
windows_backup/flutter/ephemeral/: generated_config.cmake
windows_backup/runner/: CMakeLists.txt  flutter_window.h  utils.cpp  win32_window.cpp
(+5 files in other folders)
